# finetuneops-banking-llm

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.gpu.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
configs/: train_qwen_1_5b_lora.yaml
data/processed/: banking_support_merged.jsonl  base_model_1_5b_predictions.jsonl  base_model_predictions.jsonl  benchmark_banking_support.jsonl  bitext_banking_converted.jsonl  custom_aligned_banking_v2.jsonl  custom_aligned_banking_v3.jsonl  custom_banking_safety.jsonl  custom_fraud_v5.jsonl  guardrail_base_predictions.jsonl  lora_model_predictions.jsonl  lora_model_v2_predictions.jsonl  lora_model_v3_predictions.jsonl  lora_model_v4_predictions.jsonl  lora_model_v5_predictions.jsonl  sample_banking_support.jsonl  sample_predictions.jsonl  test.jsonl  train.jsonl  val.jsonl
reports/: base_model_1_5b_eval_report.csv  base_model_error_analysis.md  base_model_eval_report.csv  baseline_comparison.md  experiment_summary.md  guardrail_base_eval_report.csv  lora_model_eval_report.csv  lora_model_v2_eval_report.csv  lora_model_v3_eval_report.csv  lora_model_v4_eval_report.csv  lora_model_v5_eval_report.csv  rule_based_eval_report.csv
src/data/: convert_bitext_dataset.py  create_custom_aligned_v3.py  format_chat_dataset.py  inspect_external_dataset.py  merge_training_sources.py  validate_schema.py
src/evaluation/: generate_baseline_predictions.py  generate_guardrail_predictions.py  generate_lora_predictions.py  rule_based_eval.py  (+2 more)
tests/: test_api.py  test_guardrails.py
(+5 files in other folders)
