[project]
name = "finetuneops"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.14.0",
    "bitsandbytes>=0.49.2",
    "datasets>=5.0.0",
    "fastapi>=0.116.0",
    "mypy>=2.1.0",
    "pandas>=3.0.3",
    "peft>=0.19.1",
    "protobuf>=7.35.1",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "pytest>=9.1.1",
    "pyyaml>=6.0.3",
    "rich>=15.0.0",
    "ruff>=0.15.20",
    "safetensors>=0.8.0",
    "scikit-learn>=1.9.0",
    "sentencepiece>=0.2.1",
    "torch>=2.12.1",
    "torchaudio>=2.11.0",
    "torchvision>=0.27.1",
    "tqdm>=4.68.3",
    "transformers>=5.13.0",
    "trl>=1.7.1",
    "typer>=0.26.8",
    "uvicorn>=0.35.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
